# rano

./: .gitignore  AGENTS.md  Cargo.toml  README.md  UPGRADE_LOG.md  observer.sqlite
.beads/: issues.jsonl
.github/workflows/: ci.yml  dist.yml  notify-acfs.yml
docs/: preset-design.md  provider-config.md
logs/e2e/outputs/: alert-thresholds-step1.out  alert-thresholds-step4.out  alert-thresholds-step9.out
scripts/e2e/: alert-thresholds.sh
src/: config_validation.rs  main.rs  pcap_capture.rs
tests/e2e/: diff-command.sh  help-command.sh  provider-config-override.sh  report-output.sh  status-command.sh
