[package]
name = "rano"
version = "0.1.0"
edition = "2024"
description = "rano (short for rust_agent_network_observer): AI CLI network observer"

[features]
default = []
pcap = ["dep:pcap"]

[dependencies]
libc = "0.2"
pcap = { version = "1.1", optional = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
